tests/invalid/numbers/wrong_case.rs
/*
fail: 1
*/

main(): i32 {
    RETURN 0;
}